@@ -137,8 +137,9 @@ print.TermDocumentMatrix <- print.DocumentTermMatrix <- function(x, ...) {
     cat(sprintf("A %s-%s matrix (%d %ss, %d %ss)\n",
                 format[1], format[2], nrow(x), format[1], ncol(x), format[2]))
     cat(sprintf("\nNon-/sparse entries: %d/%d\n", length(x$v), prod(dim(x)) - length(x$v)))
-    cat(sprintf("Sparsity           : %d%%\n", round((1 - length(x$v)/prod(dim(x))) * 100)))
-    cat("Maximal term length:", max(nchar(Terms(x), type = "chars")), "\n")
+    sparsity <- if (identical(prod(dim(x)), 0)) 100 else round((1 - length(x$v)/prod(dim(x))) * 100)
+    cat(sprintf("Sparsity           : %s%%\n", sparsity))
+    cat("Maximal term length:", max(nchar(Terms(x), type = "chars"), 0), "\n")
     cat(sprintf("Weighting          : %s (%s)\n", x$Weighting[1], x$Weighting[2]))
 }
 
